--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "handlebars": "^4.7.8",
+    "express-handlebars": "^7.1.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
